--- a/src/App.css
+++ b/src/App.css
@@ -176,3 +176,10 @@ body, .app {
   text-align: center;
   font-size: 0.8em;
 }
+
+.highlight-paragraph {
+  color: darkgray;
+  font-size: 0.8em;
+  border-left: 1.5px solid lightgray;
+  padding-left: 19px;
+}
