--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Leckerli+One');
+
 html, body, .root {
   height: 100%;
 }
@@ -187,15 +189,15 @@ body, .app {
 ul.tabs-menu {
   list-style: none;
   font-size: 22px;
-  padding-bottom: 29px;
-  padding-top: 29px;
-  border-top: 1px solid;
+  padding-bottom: 31px;
+  margin-top: 29px;
   border-bottom: 1px solid;
 }
 
 li.tabs-menu-item {
   display: inline;
   padding: 33px;
+  font-family: 'Leckerli One', cursive;
 }
 
 li.tabs-menu-item.is-active {
@@ -210,8 +212,16 @@ li.tabs-menu-item.is-active {
   width: 800px;
   margin-left: auto;
   margin-right: auto;
+  overflow: hidden;
 }
 
 .app-name {
-  padding-left: 22px;
+  margin-right: 22px;
+  margin-left: 22px;
+  font-family: 'Leckerli One', cursive;
+  float: left;
+}
+
+.app-name h1 {
+  margin-top: -4px;
 }
